[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "bython_prushton2"
version = "1.1.4.dev0"
authors = [
  { name="Peter Rushton", email="prushton@prushton.com" },
]
description = "Transpiles Bython to Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/prushton2/bython"
Issues = "https://github.com/prushton2/bython/issues"